# aismar

./: .env  Cargo.toml
.sqlx/: query-c3521959eef33dd544de14cae67140055b2585323ca609bc4b52d5c8f05c9a1f.json
migrations/: 0101.sql
src/: config.rs  main.rs  server.rs
src/ais/: decoder.rs  mod.rs  msg21.rs
src/client/: connection.rs  connection2333.rs  connection_more_stations.rs  mod.rs
src/db/: database.rs
