[package]
name = "aismar"
version = "0.1.0"
edition = "2024"

[dependencies]
ais = "0.12.0"
anyhow = "1.0.97"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
